--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -15,11 +15,27 @@ html {
  */
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ nav {
+   font-family: 'Bungee', sans-serif;
+ }
+
+ .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-self: center;
+  width: 90%;
+  background-color: #f4f1ec;
+}
