Create jQuery function: slide the whole new-tweet section up or down on button click.

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -57,6 +57,10 @@
   .fa-angle-double-down {
     color: #FF0000;
   }
+  .fa-angle-double-down:hover {
+    color: orange;
+    padding-top: 0.5em;
+  }
   /* Manage hover state for social icons: change colour when user hovers on icon */
   .fa-flag:hover {
     color: orange;
