Add responsive design: media query to style layout.css.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -39,3 +39,16 @@ body {
   width: 90%;
   background-color: #f4f1ec;
 }
+
+/* Desktop version */
+/* Responsive design for desktop screen sizes as a minimum. */
+@media only screen and (min-width: 1024px) {
+  body {
+    flex-direction: row;
+  }
+  main {
+    margin: 2em;
+    margin-top: 3.5rem;
+    width: 5em;
+  }
+}
