Add responsive design: media query to style nav.css for mobile/tablet screen sizes.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -39,3 +39,13 @@ nav {
     font-size: 1.5rem;
     color: #FF0000;
   }
+
+  /* Tablet / mobile version */
+  @media only screen and (max-width: 1023px) {
+    nav {
+      padding-bottom: 2.5em;
+      height: 7rem;
+      background-color: #FFA84C;
+      background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+    }  
+ }   
